standard login used now

--- a/SlidingMenuExample/app/src/main/AndroidManifest.xml
+++ b/SlidingMenuExample/app/src/main/AndroidManifest.xml
@@ -23,15 +23,18 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:label="Life By Me">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".LoginActivityHomemade"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:label="Life By Me">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
