login activity update

--- a/SlidingMenuExample/app/src/main/AndroidManifest.xml
+++ b/SlidingMenuExample/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:label="Life By Me">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
