--- a/SlidingMenuExample/app/src/main/AndroidManifest.xml
+++ b/SlidingMenuExample/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-feature
-        android:name="@string/step_detector" android:required="false"/>
 
     <uses-feature
-        android:name="@string/step_counter" android:required="false"/>
+        android:name="@string/step_detector"
+        android:required="false" />
+    <uses-feature
+        android:name="@string/step_counter"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -22,26 +24,26 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-
-            android:label="SlidingMenuExample">
-
-        </activity>
+            android:label="SlidingMenuExample"></activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:label="Life By Me">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:label="Life By Me"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivityHomemade"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:label="Life By Me">
+            android:label="Life By Me"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
-        </activity>
+        <service
+            android:name=".stepCounterService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
