--- a/SlidingMenuExample/app/src/main/AndroidManifest.xml
+++ b/SlidingMenuExample/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
         <activity
             android:name=".CreateUser"
             android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
 
+        <activity
+            android:name=".ForgotPassword"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
         <service
