--- a/SlidingMenuExample/app/build.gradle
+++ b/SlidingMenuExample/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jjoe64:graphview:4.0.1'
+    compile 'com.wefika:horizontal-picker:1.1.1'
     compile 'com.hrules:horizontalnumberpicker:1.1.1'
     compile 'com.jakewharton:butterknife:8.0.0'
     compile files('libs/commons-math3-3.6.1.jar')
