--- a/LifeByME/app/src/main/AndroidManifest.xml
+++ b/LifeByME/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gnirt69.LifeByME"
-    android:versionCode="1"
-    android:versionName="1.0">
+    >
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -26,14 +25,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.gnirt69.LifeByME.MainActivity"
-            android:label="LifeByME"
+            android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait">
 
         </activity>
         <activity
             android:name="com.gnirt69.LifeByME.LoginActivity"
-            android:label="LifeByME"
+            android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,10 +40,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.gnirt69.LifeByME.LoginActivityHomemade"
-            android:label="LifeByME"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
         <activity
             android:name="com.gnirt69.LifeByME.CreateUser"
@@ -59,7 +54,9 @@
         <service
             android:name="com.gnirt69.LifeByME.stepCounterService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true">
+
+        </service>
     </application>
 
 </manifest>
